crates/validation-tests/tests/snapshots/scenario_tests__invalid_and_duplicate_storage_mappings.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: flow://storageMapping/leading/Slash/,
        error: /leading/Slash/ cannot be used as name for storageMapping ("/leading/Slash/" is invalid),
    },
    Error {
        scope: flow://storageMapping/bad%20space,
        error: bad space cannot be used as name for storageMapping ("bad space" is invalid),
    },
    Error {
        scope: flow://storageMapping/bad!punctuation/,
        error: bad!punctuation/ cannot be used as name for storageMapping ("bad!punctuation/" is invalid),
    },
    Error {
        scope: flow://storageMapping/double//slash/,
        error: double//slash/ cannot be used as name for storageMapping ("/slash/" is invalid),
    },
    Error {
        scope: flow://storageMapping/missingSlash,
        error: missingSlash cannot be used as name for storageMapping ("missingSlash" is invalid),
    },
    Error {
        scope: flow://storageMappings/#/,
        error: storageMapping  is a prohibited prefix of storageMapping /leading/Slash, defined at flow://storageMappings/#/~1leading~1Slash~1,
    },
    Error {
        scope: flow://storageMappings/#/not-matched~1,
        error: storageMapping not-matched is a prohibited prefix of storageMapping Not-Matched/foobar, defined at flow://storageMappings/#/Not-Matched~1foobar~1,
    },
    Error {
        scope: flow://storageMappings/#/recoverY~1,
        error: storageMapping recoverY is a prohibited prefix of storageMapping recovery/testing, defined at flow://storageMappings/#/recovery~1testing~1,
    },
]
