crates/validation-tests/tests/snapshots/scenario_tests__invalid_collection_names_prefixes_and_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/collections/,
        error: collection name cannot be empty,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/~1testing~1bad~1name,
        error: /testing/bad/name cannot be used as name for collection ("/" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1bad%20name,
        error: testing/bad name cannot be used as name for collection (" name" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1bad!name,
        error: testing/bad!name cannot be used as name for collection ("!name" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1bad~1~1name,
        error: testing/bad//name cannot be used as name for collection ("//name" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1bad~1name~1,
        error: testing/bad/name/ cannot be used as name for collection ("/" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/,
        error: collection  is a prohibited prefix of collection /testing/bad/name, defined at test://example/catalog.yaml#/collections/~1testing~1bad~1name,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing,
        error: collection testing is a prohibited prefix of collection testing/array-key, defined at test://example/array-key#/collections/testing~1array-key,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1Int-Halve,
        error: collection testing/Int-Halve collides with collection testing/int-halve, defined at test://example/int-halve#/collections/testing~1int-halve,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1int-sTRinG,
        error: collection testing/int-sTRinG collides with collection testing/int-string, defined at test://example/int-string#/collections/testing~1int-string,
    },
]
