crates/validation-tests/tests/snapshots/scenario_tests__invalid_transform_names_and_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/1,
        error: transform name cannot be empty,
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/2,
        error: inv alid cannot be used as name for transform (" alid" is invalid),
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/3,
        error: inv!alid cannot be used as name for transform ("!alid" is invalid),
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/4,
        error: inv/alid cannot be used as name for transform ("/alid" is invalid),
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/0,
        error: transform reverseIntString collides with transform reVeRsEIntString, defined at test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/5,
    },
]
