crates/validation-tests/tests/snapshots/scenario_tests__non_canonical_schema_ref.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/schema,
        error: schema $ref 'test://example/int-string-len.schema', referenced by 'test://example/int-halve#/collections/testing~1int-halve/schema', was not found,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms/1,
        error: collection testing/int-halve, referenced by transform halveSelf, is not defined,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1,
        error: collection testing/int-halve, referenced by this materialization binding, is not defined,
    },
]
