crates/validation-tests/tests/snapshots/scenario_tests__shape_inspections.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/schema,
        error: '/int' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/schema,
        error: /int has 'set' reduction strategy, restricted to objects, but has types "integer",
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/schema,
        error: '/str' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/schema,
        error: /str has 'sum' reduction strategy (restricted to integers, numbers and strings with `format: integer` or `format: number`) but has types "string",
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/key/0,
        error: location /int has a reduction strategy, which is disallowed because the location is used as a key,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/readSchema,
        error: '/int' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/readSchema,
        error: /int has 'set' reduction strategy, restricted to objects, but has types "integer",
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/readSchema,
        error: '/str' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/readSchema,
        error: /str has 'sum' reduction strategy (restricted to integers, numbers and strings with `format: integer` or `format: number`) but has types "string",
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string-rw/key/0,
        error: location /int has a reduction strategy, which is disallowed because the location is used as a key,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms/0/shuffle/key/1,
        error: location /str has a reduction strategy, which is disallowed because the location is used as a key,
    },
]
