crates/validation-tests/tests/snapshots/scenario_tests__shuffle_key_empty.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive/transforms/0/shuffle/key,
        error: transform reverseIntString shuffle key cannot be empty,
    },
]
